# spice-model-extractor

./: .gitignore  INTERFACES.md  README.md  README_API.md  index.html  package-lock.json  package.json  progress.md  requirements-api.txt  vite.config.ts
datademo/: fit_comparison.html
scripts/: driveby.py  plot_fit_comparison.py  plot_fit_results.py  preview.py
spicebuilder/api/: __init__.py  models.py  routes.py  server.py  state.py
spicebuilder/api/scripts/: __init__.py  run_api.py
spicebuilder/data/: loader_sdh.py  simdata.py
spicebuilder/fitting/: engine.py  stage.py
spicebuilder/report/: __init__.py  excel_report.py
spicebuilder/simulator/: evaluator.py  ltspice.py
spicebuilder/strategy/: sgt_6stage.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: filesystem.rs  mod.rs  proxy.rs  python_backend.rs
src/app/: App.tsx
src/app/components/: CurveVisualizer.tsx  Dashboard.tsx  DataBrowser.tsx  ExportScreen.tsx  FittingPipeline.tsx  ModelEditor.tsx  SettingsScreen.tsx  Sidebar.tsx  ValidateScreen.tsx
src/app/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Slider.tsx  index.ts
src/lib/: api.ts  constants.ts  store.tsx  types.ts  utils.ts
src/styles/: index.css  theme.css
